datasets/dataset_txt/requests/requests_2090.txt
Contributor
michaelhelmick commented on Jun 11, 2013
Looked through all the recent issues and couldn't find anything on it:
(twython3)Mikes-MacBook-Air:~ mikehelmick$ pip install requests
Downloading/unpacking requests
  Downloading requests-1.2.3.tar.gz (348kB): 348kB downloaded
  Running setup.py egg_info for package requests

Installing collected packages: requests
  Running setup.py install for requests

      File "/Users/mikehelmick/.virtualenv/twython3/lib/python3.3/site-packages/requests/packages/urllib3/contrib/ntlmpool.py", line 38
        """
         ^
    SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 130-131: truncated \uXXXX escape

Successfully installed requests
Cleaning up...
requests still installed find, but just looks a little ugly when installing ;)